Add WebSocket support and real-time game notifications
- Introduced `JolWebSocketEndpoint` class to handle WebSocket connections and player authentication.
- Added `WebSocketRegistry` to manage connections and broadcast updates.
- Updated game-related services (`JolAdmin`, `GlobalChatService`, etc.) to notify via WebSocket.
- Integrated a WebSocket fallback mechanism into the UI to ensure reliable updates.
- Updated `pom.xml` and NGINX configuration to support WebSocket functionality.